--- a/src/UniNotifier_en_us.resx
+++ b/src/UniNotifier_en_us.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="CurlyTemplate" xml:space="preserve">
+    <value>Remember to replace items enclosed in curly braces with what you want</value>
+  </data>
   <data name="DeleteLineNotSpecified" xml:space="preserve">
     <value>Notification for deleting not selected</value>
   </data>
