--- a/src/UniNotifier_ru_ru.resx
+++ b/src/UniNotifier_ru_ru.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="CurlyTemplate" xml:space="preserve">
+    <value>Не забудьте заменить элементы, заключённые в фигурные скобки, на то, что Вам нужно</value>
+  </data>
   <data name="DeleteLineNotSpecified" xml:space="preserve">
     <value>Не выбрано оповещение для удаления</value>
   </data>
