--- a/src/android/UniNotifier_en_us.resx
+++ b/src/android/UniNotifier_en_us.resx
@@ -123,6 +123,9 @@
   <data name="AcceptButton" xml:space="preserve">
     <value>No, I already read and completely accepted them</value>
   </data>
+  <data name="AddButton" xml:space="preserve">
+    <value>Add new</value>
+  </data>
   <data name="ADPPage" xml:space="preserve">
     <value>Policy and EULA</value>
   </data>
@@ -138,21 +141,57 @@
   <data name="AllowVibroSwitch" xml:space="preserve">
     <value>Allow vibration</value>
   </data>
+  <data name="ApplyButton" xml:space="preserve">
+    <value>Update selected</value>
+  </data>
   <data name="AppPage" xml:space="preserve">
     <value>Go to app webpage</value>
+  </data>
+  <data name="BeginningFieldLabel" xml:space="preserve">
+    <value>Beginning:</value>
   </data>
   <data name="CancelButton" xml:space="preserve">
     <value>Cancel</value>
   </data>
+  <data name="CurlyTemplate" xml:space="preserve">
+    <value>Remember to replace items enclosed in curly braces with what you want</value>
+  </data>
   <data name="DeclineButton" xml:space="preserve">
     <value>Yes, I want to read them</value>
+  </data>
+  <data name="DeleteButton" xml:space="preserve">
+    <value>Delete selected</value>
+  </data>
+  <data name="DeleteMessage" xml:space="preserve">
+    <value>Delete selected notification?</value>
+  </data>
+  <data name="EnabledLabel" xml:space="preserve">
+    <value>Enabled</value>
+  </data>
+  <data name="EndingFieldLabel" xml:space="preserve">
+    <value>Ending:</value>
+  </data>
+  <data name="FreqFieldLabel" xml:space="preserve">
+    <value>Update frequency: {0:D} minutes</value>
   </data>
   <data name="LaunchMessage" xml:space="preserve">
     <value>Notification service successfully started.
 Launch main application for setup or turning off service</value>
   </data>
+  <data name="LinkFieldLabel" xml:space="preserve">
+    <value>Link:</value>
+  </data>
+  <data name="NameFieldLabel" xml:space="preserve">
+    <value>Name:</value>
+  </data>
   <data name="NextButton" xml:space="preserve">
-    <value>Got it!</value>
+    <value>OK</value>
+  </data>
+  <data name="NotEnoughDataMessage" xml:space="preserve">
+    <value>One of required fields is empty, or link to website is specified incorrectly</value>
+  </data>
+  <data name="NotificationsSettingsLabel" xml:space="preserve">
+    <value>Notification parameters:</value>
   </data>
   <data name="PolicyMessage" xml:space="preserve">
     <value>Before you can start using this tool, you must accept Application development policy and EULA. Do you want to open them in browser?
@@ -165,11 +204,20 @@ To decline them just close the application</value>
   <data name="SelectLanguage" xml:space="preserve">
     <value>Select language:</value>
   </data>
+  <data name="SelectNotification" xml:space="preserve">
+    <value>Select notification:</value>
+  </data>
+  <data name="SelectTemplate" xml:space="preserve">
+    <value>Select template:</value>
+  </data>
   <data name="ServiceSettingsLabel" xml:space="preserve">
-    <value>Background service settings</value>
+    <value>Background service</value>
   </data>
   <data name="SolutionPage" xml:space="preserve">
     <value>Notifications settings</value>
+  </data>
+  <data name="TemplateButton" xml:space="preserve">
+    <value>Load template</value>
   </data>
   <data name="Tip01" xml:space="preserve">
     <value>Here you can specify notifications settings. Note that every start of settings interface will turn off the background service. It will resume after closing of application</value>
