--- a/src/android/UniNotifier_ru_ru.resx
+++ b/src/android/UniNotifier_ru_ru.resx
@@ -123,6 +123,9 @@
   <data name="AcceptButton" xml:space="preserve">
     <value>Нет, я уже знаком(а) и полностью принял(а) их</value>
   </data>
+  <data name="AddButton" xml:space="preserve">
+    <value>Добавить новое</value>
+  </data>
   <data name="ADPPage" xml:space="preserve">
     <value>Политика и EULA</value>
   </data>
@@ -138,21 +141,57 @@
   <data name="AllowVibroSwitch" xml:space="preserve">
     <value>Разрешить вибрацию</value>
   </data>
+  <data name="ApplyButton" xml:space="preserve">
+    <value>Обновить выбранное</value>
+  </data>
   <data name="AppPage" xml:space="preserve">
     <value>Перейти на страницу проекта</value>
+  </data>
+  <data name="BeginningFieldLabel" xml:space="preserve">
+    <value>Начало:</value>
   </data>
   <data name="CancelButton" xml:space="preserve">
     <value>Отмена</value>
   </data>
+  <data name="CurlyTemplate" xml:space="preserve">
+    <value>Не забудьте заменить элементы, заключённые в фигурные скобки, на то, что Вам нужно</value>
+  </data>
   <data name="DeclineButton" xml:space="preserve">
     <value>Да, я хочу прочесть их</value>
+  </data>
+  <data name="DeleteButton" xml:space="preserve">
+    <value>Удалить выбранное</value>
+  </data>
+  <data name="DeleteMessage" xml:space="preserve">
+    <value>Удалить выбранное оповещение?</value>
+  </data>
+  <data name="EnabledLabel" xml:space="preserve">
+    <value>Включено</value>
+  </data>
+  <data name="EndingFieldLabel" xml:space="preserve">
+    <value>Конец:</value>
+  </data>
+  <data name="FreqFieldLabel" xml:space="preserve">
+    <value>Частота обновления: {0:D} минут</value>
   </data>
   <data name="LaunchMessage" xml:space="preserve">
     <value>Служба оповещений успешно запущена.
 Откройте основное приложение для настройки или отключения службы</value>
   </data>
+  <data name="LinkFieldLabel" xml:space="preserve">
+    <value>Ссылка:</value>
+  </data>
+  <data name="NameFieldLabel" xml:space="preserve">
+    <value>Название:</value>
+  </data>
   <data name="NextButton" xml:space="preserve">
-    <value>Принято!</value>
+    <value>OK</value>
+  </data>
+  <data name="NotEnoughDataMessage" xml:space="preserve">
+    <value>Одно из обязательных полей не заполнено, или ссылка на ресурс указана некорректно</value>
+  </data>
+  <data name="NotificationsSettingsLabel" xml:space="preserve">
+    <value>Параметры оповещения:</value>
   </data>
   <data name="PolicyMessage" xml:space="preserve">
     <value>Перед началом работы с этим инструментом Вы должны принять Политику разработки приложений и Пользовательское соглашение. Хотите открыть их тексты в браузере?
@@ -165,14 +204,23 @@
   <data name="SelectLanguage" xml:space="preserve">
     <value>Выберите язык:</value>
   </data>
+  <data name="SelectNotification" xml:space="preserve">
+    <value>Выберите оповещение:</value>
+  </data>
+  <data name="SelectTemplate" xml:space="preserve">
+    <value>Выберите шаблон:</value>
+  </data>
   <data name="ServiceSettingsLabel" xml:space="preserve">
-    <value>Настройки фоновой службы</value>
+    <value>Фоновая служба</value>
   </data>
   <data name="SolutionAboutPage" xml:space="preserve">
     <value>Как принимается решение</value>
   </data>
   <data name="SolutionPage" xml:space="preserve">
     <value>Настройки оповещений</value>
+  </data>
+  <data name="TemplateButton" xml:space="preserve">
+    <value>Загрузить шаблон</value>
   </data>
   <data name="Tip01" xml:space="preserve">
     <value>Здесь вы можете указать настройки уведомлений. Обратите внимание, что каждый запуск интерфейса настроек будет отключать фоновую службу. Она продолжит работу после закрытия приложения</value>
