--- a/src/android/UniNotifier_en_us.resx
+++ b/src/android/UniNotifier_en_us.resx
@@ -208,6 +208,9 @@ Launch main application for setup or turning off the service</value>
   <data name="NotMatchingNames" xml:space="preserve">
     <value>Notification with the same name already added</value>
   </data>
+  <data name="OccFieldLabel" xml:space="preserve">
+    <value>Occurence #{0:D}</value>
+  </data>
   <data name="PolicyMessage" xml:space="preserve">
     <value>Before you can start using this tool, you must accept Application development policy and EULA. Do you want to open them in browser?
 
@@ -248,5 +251,8 @@ To decline them just close the application</value>
   </data>
   <data name="TipHeader01" xml:space="preserve">
     <value>Hello dear user!</value>
+  </data>
+  <data name="ViewFullTextButton" xml:space="preserve">
+    <value>View fully / change settings</value>
   </data>
 </root>
