--- a/src/UniNotifier_ru_ru.resx
+++ b/src/UniNotifier_ru_ru.resx
@@ -127,11 +127,11 @@
     <value>Удалить выбранное оповещение?</value>
   </data>
   <data name="HelpText" xml:space="preserve">
-    <value>Данная служба предоставляет возможность получать оповещения об изменении состояния отслеживаемых веб-страниц в виде сообщений в трее.
+    <value>Данная служба предоставляет возможность получать оповещения об изменении состояния отслеживаемых веб-страниц (иначе – об обновлениях и новостях) в виде системных сообщений.
 
 Контекстное меню, вызываемое по правому щелчку на значке приложения в трее, позволяет управлять оповещениями и конструировать их, просматривать их в большом окне, а также запрашивать информацию о приложении и переходить на отслеживаемые страницы.
 
-Кроме того, приложение с шагом в 5 минут и указанной частотой обновления самостоятельно запрашивает новые записи и при их наличии отображает соответствующие оповещения</value>
+Кроме того, приложение с указанной частотой обновления самостоятельно запрашивает новые записи и при их наличии отображает соответствующие оповещения</value>
   </data>
   <data name="KeywordNotSpecified" xml:space="preserve">
     <value>В поле «Начало» не указано ключевое слово для поиска</value>
