--- a/src/UniNotifier_en_us.resx
+++ b/src/UniNotifier_en_us.resx
@@ -127,11 +127,11 @@
     <value>Delete selected notification?</value>
   </data>
   <data name="HelpText" xml:space="preserve">
-    <value>This service provides ability to receive notifications about changes in the state of monitored web-pages in the form of tray messages.
+    <value>This utility provides ability to receive notifications about changes in state of monitored web pages (in other words – about updates and news) in form of system messages.
 
 The context menu invoked by right-clicking on the application icon in system tray allows you to manage and build notifications, view them in main window, as well as request information about the application and go to monitored pages.
 
-In addition, the utility automatically requests new records in 5-minute increments and specified update rate and, if available, displays the appropriate notifications</value>
+In addition, the utility automatically requests new records with specified update rate and, if available, displays the appropriate notifications</value>
   </data>
   <data name="KeywordNotSpecified" xml:space="preserve">
     <value>Search keyword is missing in “Beginning” field</value>
@@ -202,6 +202,6 @@ In addition, the utility automatically requests new records in 5-minute incremen
     <value>Update selected notification?</value>
   </data>
   <data name="SettingsForm_Label07" xml:space="preserve">
-    <value>Occurence number:</value>
+    <value>Occurrence number:</value>
   </data>
 </root>
