--- a/src/android/UniNotifier_ru_ru.resx
+++ b/src/android/UniNotifier_ru_ru.resx
@@ -200,7 +200,7 @@
   </data>
   <data name="LaunchMessage" xml:space="preserve">
     <value>Служба оповещений начала наблюдение...
-• Используйте эти кнопки для просмотра полных текстов оповещений и настройки UniNotifier
+• Используйте эти кнопки для просмотра полных текстов оповещений и настройки UniNotifier;
 • Нажимайте на оповещение, чтобы перейти на ресурс, с которого оно получено</value>
   </data>
   <data name="LinkFieldLabel" xml:space="preserve">
