--- a/src/android/UniNotifier_ru_ru.resx
+++ b/src/android/UniNotifier_ru_ru.resx
@@ -121,7 +121,7 @@
     <value>О приложении</value>
   </data>
   <data name="AcceptButton" xml:space="preserve">
-    <value>Нет, я уже знаком(а) и полностью принял(а) их</value>
+    <value>Принять</value>
   </data>
   <data name="AddButton" xml:space="preserve">
     <value>Добавить как новое</value>
@@ -169,7 +169,7 @@
     <value>Не забудьте заменить элементы, заключённые в фигурные скобки, на то, что Вам нужно</value>
   </data>
   <data name="DeclineButton" xml:space="preserve">
-    <value>Да, я хочу прочесть их</value>
+    <value>Читать</value>
   </data>
   <data name="DeleteButton" xml:space="preserve">
     <value>Удалить выбранное</value>
@@ -235,8 +235,9 @@
   </data>
   <data name="PolicyMessage" xml:space="preserve">
     <value>Перед началом работы с этим инструментом Вы должны принять Политику разработки приложений и Пользовательское соглашение. Хотите открыть их тексты в браузере?
-
-Чтобы отказаться от них, просто закройте приложение</value>
+• Нажмите «Принять», если Вы уже ознакомились и полностью приняли их;
+• Нажмите «Читать», если хотите открыть их в браузере;
+• Чтобы отклонить их, закройте приложение</value>
   </data>
   <data name="RestartApp" xml:space="preserve">
     <value>Перезапустите приложение</value>
@@ -266,7 +267,7 @@
     <value>Здесь Вы можете задать настройки уведомлений. Обратите внимание, что переход к настройкам и полным текстам оповещений будет приостанавливать фоновую службу. Она продолжит работу после закрытия формы настроек</value>
   </data>
   <data name="Tip02" xml:space="preserve">
-    <value>ВНИМАНИЕ! Приложение может получать уведомления, только если устройство подключено к электросети и/или экран не находится в спящем режиме. Мы над этим работаем</value>
+    <value>ВНИМАНИЕ! Приложение может получать уведомления, только если устройство подключено к электросети и/или экран не находится в спящем режиме</value>
   </data>
   <data name="Tip03" xml:space="preserve">
     <value>Для использования этой функции укажите какое-либо ключевое слово из целевого участка сайта в поле «Начало»</value>
