--- a/src/android/UniNotifier_ru_ru.resx
+++ b/src/android/UniNotifier_ru_ru.resx
@@ -265,10 +265,14 @@
     <value>Шаблон</value>
   </data>
   <data name="Tip01" xml:space="preserve">
-    <value>Здесь Вы можете задать настройки уведомлений. Обратите внимание, что переход к настройкам и полным текстам оповещений будет приостанавливать фоновую службу. Она продолжит работу после закрытия формы настроек</value>
+    <value>Здесь Вы можете задать настройки уведомлений.
+
+Обратите внимание, что переход к настройкам и полным текстам оповещений будет приостанавливать фоновую службу. Она продолжит работу после закрытия / сворачивания формы настроек</value>
   </data>
   <data name="Tip02" xml:space="preserve">
-    <value>ВНИМАНИЕ! Приложение может получать уведомления, только если устройство подключено к электросети и/или экран не находится в спящем режиме</value>
+    <value>ВНИМАНИЕ!
+1. Приложение может получать уведомления, только если устройство подключено к электросети и/или экран не находится в спящем режиме.
+2. Некоторые устройства требуют ручной настройки атрибутов уведомлений (вибро, свет, звуки). Настройки приложения могут не действовать</value>
   </data>
   <data name="Tip03" xml:space="preserve">
     <value>Для использования этой функции укажите какое-либо ключевое слово из целевого участка сайта в поле «Начало»</value>
